--- a/src/sections/QuickStart/styles.module.css
+++ b/src/sections/QuickStart/styles.module.css
@@ -29,7 +29,7 @@
 
 .code {
     width: 100%;
-    font-size: var(--fsSmall);
+    font-size: var(--body1);
     background: var(--bgCode);
     color: var(--textSecondary);
     border-radius: calc(var(--uint) * 2);
@@ -101,7 +101,7 @@
 
 .message {
     width: 100%;
-    font-size: var(--fsSmall);
+    font-size: var(--body1);
     word-wrap: break-word;
 }
 
@@ -138,7 +138,7 @@
     margin-top: calc(var(--uint) * 0.5);
     text-align: right;
     opacity: 0.4;
-    font-size: var(--fsBigSmall);
+    font-size: var(--body2);
 }
 
 @media only screen and (max-width: 900px) {
