--- a/src/sections/Features/Cryptocurrencies/styles.module.css
+++ b/src/sections/Features/Cryptocurrencies/styles.module.css
@@ -102,7 +102,7 @@
 .currencies li p {
   margin-top: calc(var(--uint) * 1);
   opacity: 0.5;
-  font-size: var(--fsBigSmall);
+  font-size: var(--body2);
   font-weight: 500;
 }
 
