--- a/src/sections/Features/Statistics/styles.module.css
+++ b/src/sections/Features/Statistics/styles.module.css
@@ -23,18 +23,18 @@
     flex-grow: 1;
 }
 
-.wrap > div {
+.wrap>div {
     top: 50%;
     transform: translateY(-50%);
     position: absolute;
     width: 100%;
 }
 
-.wrap > div:first-of-type {
+.wrap>div:first-of-type {
     animation: Fade1 12s linear infinite;
 }
 
-.wrap > div:last-of-type {
+.wrap>div:last-of-type {
     animation: Fade 12s linear infinite;
 }
 
@@ -92,7 +92,7 @@
 }
 
 .buttons {
-    font-size: var(--fsSmall);
+    font-size: var(--body1);
     margin-top: calc(var(--uint) * 0.5);
     width: 100%;
     display: flex;
@@ -101,8 +101,8 @@
     gap: calc(var(--uint) * 0.5);
 }
 
-.buttons > div {
-    padding: calc(var(--uint) * 1.5);
+.buttons>div {
+    padding: calc(var(--uint) * 1.5) 0;
     text-align: center;
     border-radius: calc(var(--uint) * 1);
     background: var(--tgButton);
@@ -110,16 +110,16 @@
     width: 100%;
 }
 
-.buttons > .selectButton {
+.buttons>.selectButton {
     background: var(--tgButtonSelect);
 }
 
-.buttons > .buttonSmall {
-    width: calc(50% - 2px);
+.buttons>.buttonSmall {
+    width: calc(50% - calc(var(--uint) * 0.25));
 }
 
-.buttons > .buttonLast {
-    border-radius: calc(var(--uint) * 1)  calc(var(--uint) * 1) calc(var(--uint) * 2)  calc(var(--uint) * 2);
+.buttons>.buttonLast {
+    border-radius: calc(var(--uint) * 1) calc(var(--uint) * 1) calc(var(--uint) * 2) calc(var(--uint) * 2);
 }
 
 @media only screen and (max-width: 900px) {
@@ -131,6 +131,13 @@
 @media only screen and (max-width: 600px) {
     .messageWrap {
         min-height: 440px;
+        padding: calc(var(--uint) * 3);
+    }
+}
+
+@media only screen and (max-width: 420px) {
+    .messageWrap {
+        min-height: 520px;
         padding: calc(var(--uint) * 3);
     }
 }
