--- a/src/sections/Features/SendCoins/MessageImage/styles.module.css
+++ b/src/sections/Features/SendCoins/MessageImage/styles.module.css
@@ -26,7 +26,14 @@
 
     .avatar {
         width: 30px;
-        height: auto;
+        height: 29px;
+    }
+}
+
+@media only screen and (max-width: 420px) {
+    .avatar {
+        width: 24px;
+        height: 23px;
     }
 }
 
