--- a/src/sections/Features/SendCoins/styles.module.css
+++ b/src/sections/Features/SendCoins/styles.module.css
@@ -4,7 +4,7 @@
     width: 100%;
     max-width: 470px;
     margin: 0 auto;
-    margin-top: -280px;
+    margin-top: -230px;
     margin-bottom: calc(var(--uint) * 2);
 }
 
@@ -25,7 +25,7 @@
 
 @media only screen and (max-width: 600px) {
     .messages {
-        bottom: 30%;
+        bottom: 32%;
         max-width: 85%;
     }
 
@@ -34,12 +34,17 @@
     }
 }
 
-@media only screen and (max-width: 420px) {
+@media only screen and (max-width: 440px) {
     .messages {
-        bottom: 32%;
         max-width: 85%;
     }
 
+    .imageWrap {
+        margin-top: -120px;
+    }
+}
+
+@media only screen and (max-width: 360px) {
     .imageWrap {
         margin-top: -80px;
     }
