--- a/src/sections/Features/Exchange/styles.module.css
+++ b/src/sections/Features/Exchange/styles.module.css
@@ -8,7 +8,8 @@
 
 .coins {
     position: relative;
-    padding-right: 48px;
+    width: 144px;
+    height: 96px;
 }
 
 .coins img {
@@ -16,20 +17,164 @@
     border: 4px solid var(--bgPrimary);
 }
 
-.coins img:not(:first-of-type){
+.coins img {
     position: absolute;
+    transition: 0.1s all ease;
+}
+
+.coins img:nth-child(1){
+    left: 0;
+    animation: Exchange1 20s linear infinite;
 }
 
 .coins img:nth-child(2){
     left: 24px;
+    animation: Exchange2 20s linear infinite;
 }
 
 .coins img:nth-child(3){
     left: 48px;
+    animation: Exchange3 20s linear infinite;
 }
 
 .swap {
+    z-index: 10;
     right: calc(50% - 24px);
     transform: translateX(50%);
     position: absolute;
 }
+
+@keyframes Exchange1 {
+    0% {
+        left: 0;
+        z-index: 1;
+    }
+
+    29% {
+        left: 0;
+        z-index: 1;
+    }
+
+    33% {
+        z-index: 2;
+        left: 24px;
+    }
+    34% {
+        z-index: 2;
+        left: 24px;
+    }
+
+    36% {
+        z-index: 3;
+        left: 48px;
+    }
+    37% {
+        z-index: 3;
+        left: 48px;
+    }
+
+    42% {
+        z-index: 1;
+        left: 0;
+    }
+
+    100% {
+        left: 0;
+        z-index: 1;
+    }
+}
+
+@keyframes Exchange2 {
+    0% {
+        left: 24px;
+        z-index: 2;
+    }
+
+    29% {
+        left: 24px;
+        z-index: 2;
+    }
+
+    33% {
+        z-index: 3;
+        left: 48px;
+    }
+    34% {
+        z-index: 3;
+        left: 48px;
+    }
+
+    36% {
+        z-index: 1;
+        left: 0px;
+    }
+    37% {
+        z-index: 1;
+        left: 0px;
+    }
+
+    42% {
+        z-index: 2;
+        left: 24px;
+    }
+
+    100% {
+        left: 24px;
+        z-index: 2;
+    }
+}
+
+@keyframes Exchange3 {
+    0% {
+        left: 48px;
+        z-index: 3;
+    }
+
+    29% {
+        left: 48px;
+        z-index: 3;
+    }
+
+    33% {
+        z-index: 1;
+        left: 0;
+    }
+    34% {
+        z-index: 1;
+        left: 0;
+    }
+
+    36% {
+        z-index: 2;
+        left: 24px;
+    }
+    37% {
+        z-index: 2;
+        left: 24px;
+    }
+
+    42% {
+        z-index: 3;
+        left: 48px;
+    }
+
+    100% {
+        z-index: 3;
+        left: 48px;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .coins {
+        position: relative;
+        width: 124px;
+        height: 80px;
+    }
+
+    .coins img,
+    .exchangeImage {
+        width: 80px;
+        height: 100%;
+    }
+  }
+  
