--- a/src/sections/Features/Exchange/styles.module.css
+++ b/src/sections/Features/Exchange/styles.module.css
@@ -60,7 +60,7 @@
         left: 24px;
     }
     34% {
-        z-index: 2;
+        z-index: 3;
         left: 24px;
     }
 
@@ -89,10 +89,14 @@
         left: 24px;
         z-index: 2;
     }
+    28% {
+        left: 24px;
+        z-index: 2;
+    }
 
     29% {
         left: 24px;
-        z-index: 2;
+        z-index: 3;
     }
 
     33% {
@@ -104,9 +108,9 @@
         left: 48px;
     }
 
-    36% {
+    35% {
         z-index: 1;
-        left: 0px;
+        left: 48px;
     }
     37% {
         z-index: 1;
