--- a/src/sections/Features/Exchange/styles.module.css
+++ b/src/sections/Features/Exchange/styles.module.css
@@ -8,13 +8,13 @@
 
 .coins {
     position: relative;
-    width: 144px;
+    width: 148px;
     height: 96px;
 }
 
 .coins img {
     border-radius: 50%;
-    border: 4px solid var(--bgPrimary);
+    border: calc(var(--uint) * 0.5) solid var(--bgPrimary);
 }
 
 .coins img {
@@ -38,10 +38,22 @@
 }
 
 .swap {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--swap);
+    padding: calc(var(--uint) * 0.5) calc(var(--uint) * 1.5);
+    border: 1px solid var(--bgPrimary);
+    border-radius: calc(var(--uint) * 2);
     z-index: 10;
-    right: calc(50% - 24px);
+    right: calc(50% - calc(var(--uint) * 3));
     transform: translateX(50%);
     position: absolute;
+}
+
+.swap svg {
+    width: 20px;
+    height: 21px;
 }
 
 @keyframes Exchange1 {
@@ -171,7 +183,7 @@
 @media only screen and (max-width: 600px) {
     .coins {
         position: relative;
-        width: 124px;
+        width: 132px;
         height: 80px;
     }
 
@@ -179,6 +191,11 @@
     .exchangeImage {
         width: 80px;
         height: 100%;
+    }
+    
+    .swap svg {
+        width: 15px;
+        height: 16px;
     }
   }
   
