--- a/src/sections/UseCases/styles.module.css
+++ b/src/sections/UseCases/styles.module.css
@@ -171,4 +171,8 @@
     .messageWrap {
         padding: calc(var(--uint) * 4);
     }
+
+    .slideImage {
+        border-radius: calc(var(--uint) * 3);
+    }
 }
